adding checklist pengiriman js for detecting client and its pattern puppeteer library added

--- a/views/checklist_pengiriman/index.ejs
+++ b/views/checklist_pengiriman/index.ejs
@@ -100,6 +100,6 @@
         </div>
       </div>
     </div>
-    <script src="index.js"></script>
+    <script src="/public/checklist_pengiriman/index.js"></script>
   </body>
 </html>
