the only problem stuck unable generate pdf

--- a/views/checklist_pengiriman/index.ejs
+++ b/views/checklist_pengiriman/index.ejs
@@ -19,15 +19,15 @@
       <div class="col detail">
         <div class="row det-content">
           <div>No Pengiriman</div>
-          <div>:<span><%= no_penigriman %></span></div>
+          <div>:<span><%= no_pengiriman %></span></div>
         </div>
         <div class="row det-content">
           <div>Tanggal</div>
-          <div>:<span><%= tanggal %></span></div>
+          <div>:<span><%= tgl_pengiriman %></span></div>
         </div>
         <div class="row det-content">
           <div>Nama Customer</div>
-          <div>:<span><%= nama_customer %></span></div>
+          <div>:<span><%= nama_pelanggan %></span></div>
         </div>
       </div>
       <table class="checklist">
