--- a/views/checklist_pengiriman/index.ejs
+++ b/views/checklist_pengiriman/index.ejs
@@ -8,12 +8,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <link rel="stylesheet" href="/public/checklist_pengiriman/style.css" />
+    <link rel="stylesheet" href="http:\\localhost:3000\public\checklist_pengiriman\style.css" />
   </head>
   <body>
     <div class="main col">
       <div class="header row">
-        <img class="logo" src="/public/asset/image.png" alt="" />
+        <img class="logo" src="http:\\localhost:3000\public\asset\image.png" alt="" />
         <h2>PT. ANUGRAH METAL MITRA MANDIRI</h2>
       </div>
       <div class="col detail">
@@ -27,7 +27,7 @@
         </div>
         <div class="row det-content">
           <div>Nama Customer</div>
-          <div>:<span><%= nama_pelanggan %></span></div>
+          <div>:<span id="nama_pelanggan"><%= nama_pelanggan %></span></div>
         </div>
       </div>
       <table class="checklist">
@@ -100,6 +100,6 @@
         </div>
       </div>
     </div>
-    <script src="/public/checklist_pengiriman/index.js"></script>
+    <script src="http:\\localhost:3000\public\checklist_pengiriman\index.js"></script>
   </body>
 </html>
