adding new company

--- a/views/user_interface/index.ejs
+++ b/views/user_interface/index.ejs
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/public/user_interface/style.css">
-</head>
-<body>
-    <input type="file">
-    <button class="upload">Upload</button>
+    <link rel="stylesheet" href="/public/user_interface/style.css" />
+  </head>
+  <body>
+    <div class="am3">
+      <h1>AM3</h1>
+      <input type="file" />
+      <input type="submit" class="upload am3" value="Upload">
+    </div>
+
+    <div class="stma">
+      <h1>Sutema</h1>
+      <input type="file"/>
+      <input type="submit" class="upload stma" value="Upload">
+    </div>
+
     <script src="/public/user_interface/index.js"></script>
-</body>
+  </body>
 </html>
